# rest_controller_python

./: AUTHORS  COPYING.txt  ChangeLog  README.md  README.rst  requirements.txt  setup.cfg  setup.py
rest_controller/: main_controller.py  output.py  services.py
rest_controller/configuration/: entry_points_URI.py  error_codes.py  read_config_file.py  rest.conf
rest_controller/daemon_tool/: daemon.py  rest_daemon.py  runner.py
rest_controller/log/: logger.py
tests/: rest_funtional_test.py
tests/utils_to_made_easy_testing/: http_requests.py  logger.py  rest_client.py
